# fcmp-plus-plus

./: Cargo.toml  deny.toml  rust-toolchain.toml
.github/workflows/: common-tests.yml  crypto-tests.yml  daily-deny.yml  lint.yml  monthly-nightly-update.yml  no-std.yml  tests.yml
coins/monero/: Cargo.toml
coins/monero/fcmp++/: Cargo.toml
coins/monero/fcmp++/src/: lib.rs
coins/monero/generators/src/: lib.rs
coins/monero/src/: block.rs  lib.rs  serialize.rs  transaction.rs
coins/monero/src/ringct/: mod.rs
coins/monero/src/ringct/clsag/: multisig.rs
coins/monero/src/rpc/: mod.rs
coins/monero/src/wallet/: extra.rs  scan.rs
coins/monero/src/wallet/seed/: polyseed.rs
coins/monero/src/wallet/send/: mod.rs  multisig.rs
common/std-shims/: Cargo.toml
common/std-shims/src/: sync.rs
common/zalloc/src/: lib.rs
crypto/ciphersuite/: Cargo.toml
crypto/ciphersuite/src/: helioselene.rs  lib.rs
crypto/dalek-ff-group/src/: field.rs  lib.rs
crypto/divisors/: Cargo.toml
crypto/divisors/src/: lib.rs  poly.rs  tests.rs
crypto/divisors/src/tests/: mod.rs  poly.rs
crypto/dkg/: Cargo.toml
crypto/dkg/src/: lib.rs
crypto/dleq/: Cargo.toml
crypto/dleq/src/: lib.rs
crypto/dleq/src/cross_group/: mod.rs
crypto/ed448/src/: backend.rs  point.rs
crypto/fcmp++/: Cargo.toml
crypto/fcmps/: Cargo.toml  README.md
crypto/fcmps/circuit-abstraction/: Cargo.toml
crypto/fcmps/circuit-abstraction/src/: gadgets.rs  lib.rs
crypto/fcmps/ec-gadgets/: Cargo.toml
crypto/fcmps/src/: blinds.rs  circuit.rs  lib.rs  lincomb.rs  params.rs  prover.rs  tape.rs  tests.rs  tree.rs
crypto/fcmps/src/gadgets/: interactive.rs  mod.rs
crypto/fcmps/src/prover/: blinds.rs  mod.rs
crypto/ff-group-tests/src/: group.rs
crypto/frost/: Cargo.toml
crypto/frost/src/: sign.rs
crypto/generalized-bulletproofs/: Cargo.toml  README.md
crypto/generalized-bulletproofs/src/: arithmetic_circuit_proof.rs  inner_product.rs  lib.rs  point_vector.rs  scalar_matrix.rs  scalar_vector.rs  transcript.rs
crypto/generalized-bulletproofs/src/tests/: arithmetic_circuit_proof.rs  inner_product.rs  mod.rs
crypto/generalized-schnorr/: Cargo.toml
crypto/generalized-schnorr/src/: lib.rs  mpc.rs  tests.rs
crypto/generalized-schnorr/src/tests/: mod.rs  mpc.rs
crypto/helioselene/: Cargo.toml  README.md
crypto/helioselene/src/: backend.rs  field.rs  lib.rs  point.rs
crypto/multiexp/: Cargo.toml
crypto/schnorr/: Cargo.toml
crypto/schnorr/src/tests/: rfc8032.rs
crypto/transcript/: Cargo.toml
crypto/transcript/src/: lib.rs
networks/monero/: Cargo.toml
networks/monero/generators/: Cargo.toml
networks/monero/generators/src/: lib.rs
networks/monero/io/: Cargo.toml
networks/monero/io/src/: lib.rs
networks/monero/primitives/: Cargo.toml
networks/monero/primitives/src/: lib.rs
networks/monero/ringct/borromean/: Cargo.toml
networks/monero/ringct/bulletproofs/: Cargo.toml
networks/monero/ringct/clsag/: Cargo.toml
networks/monero/ringct/clsag/src/: multisig.rs
networks/monero/ringct/fcmp++/: Cargo.toml
networks/monero/ringct/fcmp++/src/: lib.rs
networks/monero/ringct/mlsag/: Cargo.toml
networks/monero/rpc/: Cargo.toml
networks/monero/rpc/simple-request/: Cargo.toml
networks/monero/rpc/src/: lib.rs
networks/monero/src/: ringct.rs  transaction.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: lib.rs
