[package]
name = "fcmp-plus-plus"
version = "0.1.0"
description = "Implementation of FCMP++s for Monero"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/fcmp++"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["monero", "ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand_core = "0.6"
zeroize = "1"

transcript = { package = "flexible-transcript", path = "../transcript", features = ["recommended"] }

multiexp = { path = "../multiexp" }
dalek-ff-group = { path = "../dalek-ff-group" }
ciphersuite = { path = "../ciphersuite", features = ["ed25519", "helioselene"] }

generalized-schnorr = { path = "../generalized-schnorr" }
generalized-bulletproofs = { path = "../generalized-bulletproofs" }
ec-divisors = { path = "../divisors", features = ["ed25519"] }
fcmps = { package = "full-chain-membership-proofs", path = "../fcmps" }

monero-generators = { path = "../../coins/monero/generators" }
