[package]
name = "full-chain-membership-proofs"
version = "0.1.0"
description = "Implementation of full-chain membership proofs for Confidential Transaction protocols"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/fcmps"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["monero", "ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand_core = { version = "0.6", default-features = false, features = ["std"] }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

transcript = { package = "flexible-transcript", path = "../transcript", version = "0.3" }

multiexp = { path = "../multiexp", version = "0.4", default-features = false, features = ["std", "batch"] }
ciphersuite = { path = "../ciphersuite", version = "0.4", default-features = false, features = ["std"] }

ec-divisors = { path = "../divisors" }
generalized-bulletproofs = { path = "../generalized-bulletproofs" }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

transcript = { package = "flexible-transcript", path = "../transcript", features = ["recommended"] }

ciphersuite = { path = "../ciphersuite", features = ["ristretto"] }
