[package]
name = "helioselene"
version = "0.1.0"
description = "Implementation of Helios and Selene, a curve cycle towering Ed25519"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/helioselene"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["helios", "selene", "ed25519", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustversion = "1"

rand_core = { version = "0.6", default-features = false, features = ["std"] }

zeroize = { version = "^1.5", default-features = false, features = ["std", "zeroize_derive"] }
subtle = { version = "^2.4", default-features = false, features = ["std"] }

ff = { version = "0.13", default-features = false, features = ["std", "bits"] }
group = { version = "0.13", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

dalek-ff-group = { path = "../dalek-ff-group", version = "0.4.1", default-features = false, features = ["std"] }

ec-divisors = { path = "../divisors" }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

ff-group-tests = { path = "../ff-group-tests" }
